--- a/frontend/src/pages/locations/index.astro
+++ b/frontend/src/pages/locations/index.astro
@@ -14,7 +14,7 @@ import Layout from '../../layouts/Layout.astro'
     </button>
   </div>
   
-  <div class="fm-card" style="padding: 0; overflow: hidden;">
+  <div class="fm-card" style="padding: 0;">
     <style>
       .spinner {
         display: inline-block;
