--- a/frontend/src/pages/manufacturers/index.astro
+++ b/frontend/src/pages/manufacturers/index.astro
@@ -42,7 +42,7 @@ import Layout from '../../layouts/Layout.astro'
     </select>
   </div>
 
-  <div class="fm-card" style="padding: 0; overflow: hidden;">
+  <div class="fm-card" style="padding: 0;">
     <table class="fm-table">
       <thead>
         <tr>
